--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
 @media screen and (max-width:426px){
     .img-fundo img{
         width: 100%;
-        height: 950px;
+        height: 200%;
     }
 
 }
